--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -46,113 +44,113 @@
   height: 80px;
 }
 
-.green-triangle-image-container{
-    position: absolute;
-    bottom: 0;
-    right: 0px;
-    height: 450px;
-    z-index: 0;
-
+.green-triangle-image-container {
+  position: absolute;
+  bottom: 0;
+  right: 0px;
+  height: 450px;
+  z-index: 0;
 }
 
-.green-triangle-image{
-    position: absolute;
-    bottom: 0;
-    right: 100px;
-    height: 450px;
-    width:300px;
-    z-index: 0;
+.green-triangle-image {
+  position: absolute;
+  bottom: 0;
+  right: 100px;
+  height: 450px;
+  width: 300px;
+  z-index: 0;
 }
 
-.yellow-triangle-image{
-    position: absolute;
-    bottom: 0;
-    right: 0px;
-    height: 250px;
-    width: 250px;
-    z-index: 1;
+.yellow-triangle-image {
+  position: absolute;
+  bottom: 0;
+  right: 0px;
+  height: 250px;
+  width: 250px;
+  z-index: 1;
 }
 
-  .floating-grid {
-    position: absolute;
-    top: 0;
-    left: 50px;
-    z-index: 10; 
-  }
-  
-  .circle-grid-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    gap: 10px;
-    margin: 20px;
-    width: 460px;
-    height: 320px;
-    grid-template-areas: 
-                "circle1 circle2 . circle3" 
-                "circle4 . circle5 ."
-                ". circle6 . .";
-  }
-  
-  .small-pink-circle {
-    width: 50px;
-    height: 50px; 
-    background-color: #FF8888;
-    border-radius: 50%;
-    margin-left: 15px;
-    margin-top: 5px;
-  }
+.floating-grid {
+  position: absolute;
+  top: 0;
+  left: 50px;
+  z-index: 10;
+}
 
-  .small-yellow-circle {
-    width: 50px;
-    height: 50px; 
-    background-color: #FFDE5A;
-    border-radius: 50%;
-    margin-left: 15px;
-    margin-top: 5px;
-  }
+.circle-grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
+  margin: 20px;
+  width: 460px;
+  height: 320px;
+  grid-template-areas:
+    "circle1 circle2 . circle3"
+    "circle4 . circle5 ."
+    ". circle6 . .";
+  /* border: black 1px solid; */
+}
 
-  .large-pink-circle {
-    width: 100px;
-    height: 100px; 
-    background-color: #FF8888;
-    border-radius: 50%;
-    margin-left: 15px;
-    margin-top: 5px;
-  }
+.small-pink-circle {
+  width: 50px;
+  height: 50px;
+  background-color: #ff8888;
+  border-radius: 50%;
+  margin-left: 15px;
+  margin-top: 5px;
+}
 
-  .large-yellow-circle {
-    width: 100px;
-    height: 100px; 
-    background-color: #FFDE5A;
-    border-radius: 50%;
-    margin-left: 15px;
-    margin-top: 25px;
-    /* padding-top: 20px; */
-  }
+.small-yellow-circle {
+  width: 50px;
+  height: 50px;
+  background-color: #ffde5a;
+  border-radius: 50%;
+  margin-left: 15px;
+  margin-top: 5px;
+}
 
-  #circle-1 {
-    grid-area: circle1;
+.large-pink-circle {
+  width: 100px;
+  height: 100px;
+  background-color: #ff8888;
+  border-radius: 50%;
+  margin-left: 15px;
+  margin-top: 5px;
+}
+
+.large-yellow-circle {
+  width: 100px;
+  height: 100px;
+  background-color: #ffde5a;
+  border-radius: 50%;
+  margin-left: 15px;
+  margin-top: 25px;
+  /* padding-top: 20px; */
+}
+
+#circle-1 {
+  grid-area: circle1;
 }
 
 #circle-2 {
-    grid-area: circle2;
+  grid-area: circle2;
 }
 
 #circle-3 {
-    grid-area: circle3;
+  grid-area: circle3;
 }
 
 #circle-4 {
-    grid-area: circle4;
+  grid-area: circle4;
 }
 
 #circle-5 {
-    grid-area: circle5;
+  grid-area: circle5;
 }
 
 #circle-6 {
-    grid-area: circle6;
+  grid-area: circle6;
 }
 
 .form-container {
@@ -188,3 +186,149 @@ button {
   cursor: pointer;
 }
 
+
+/* @media (min-width: 1680px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1679px) {
+} */
+
+/* Mobile (480px to 1023px) */
+@media (min-width: 480px) and (max-width: 1023px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
+  }
+
+  .box {
+    height: 120px;
+  }
+
+  .box-large {
+    height: 240px;
+  }
+
+  .small-thin-box {
+    height: 12px;
+  }
+
+  .circle-grid-container {
+    width: 276px;
+    height: 192px;
+  }
+
+  .small-pink-circle,
+  .small-yellow-circle {
+    width: 30px;
+    height: 30px;
+  }
+
+  .large-pink-circle,
+  .large-yellow-circle {
+    width: 60px;
+    height: 60px;
+  }
+
+  .person-image-container {
+    height: 48px;
+  }
+
+  .person-stencil-image {
+    height: 48px;
+    width: 34px;
+  }
+
+  .green-triangle-image-container {
+    height: 270px;
+  }
+
+  .green-triangle-image {
+    height: 270px;
+    width: 180px;
+  }
+
+  .yellow-triangle-image {
+    width: 150px;
+    height: 150px;
+  }
+
+  .form-container {
+    margin: 10px;
+    padding: 10px;
+  }
+
+  input,
+  button {
+    padding: 5px;
+  }
+}
+
+@media (max-width: 479px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
+  }
+
+  .box {
+    height: 38px;
+  }
+
+  .box-large {
+    height: 76px;
+  }
+
+  .small-thin-box {
+    height: 4px;
+  }
+
+  .circle-grid-container {
+    width: 88px;
+    height: 61px;
+    margin: px;
+  }
+
+  .small-pink-circle,
+  .small-yellow-circle {
+    width: 10px;
+    height: 10px;
+  }
+
+  .large-pink-circle,
+  .large-yellow-circle {
+    width: 19px;
+    height: 19px;
+  }
+
+  .person-stencil-image {
+    height: 15px;
+    width: 6px;
+  }
+
+  .person-image-container{
+    height: 15px;
+  }
+
+  .green-triangle-image {
+    right: 19px;
+    height: 85px;
+    width: 57px;
+  }
+
+  .yellow-triangle-image {
+    width: 48px;
+    height: 48px;
+  }
+
+  .form-container {
+    margin: 5px;
+    padding: 5px;
+  }
+
+  input,
+  button {
+    padding: 4px;
+  }
+}
